--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ PORT=5000
 JWT_SECRET=F)J@NcRfUjXn2r5u8x/A%D*G-KaPdSgV
 JWT_LIFETIME=1d
 FRONTEND_URL=http://localhost:3000
-ROOT_PASSWORD=Replace this line with the MySQL root user password || other.
+ROOT_PASSWORD=sangabriel56-
 
-EMAIL_HOST=Get your credentials in https://mailtrap.io/
-EMAIL_PORT=mailtrap
-EMAIL_USER=mailtrap
-EMAIL_PASS=mailtrap
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=d09998614859da
+EMAIL_PASS=5c254c0b3c2c4d
